--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 		<title>Welcome to Microblog!</title>
 		{% endif %}
 	    <style>
-        #card-wrapper {
+        .card-wrapper {
             color: black;
             text-decoration: none;
             width: 80%;
@@ -16,6 +16,24 @@
             margin-right: auto;
             margin-top: 20px;
         }
+
+        .item-wrapper {
+            color: black;
+            text-decoration: none;
+            width: 50%;
+            display: block;
+            padding: 30px 20px;
+        }
+
+        .amt-box {
+            border: 1px black solid;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            width: 50px;
+            margin: 0px 10px;
+            text-align: center;
+        }
+
         img {
             width: 90%;
             margin-left: auto;
@@ -29,8 +47,11 @@
     </style>
 	</head>
 	<body>
-        <div>Microblog: <a href="/index">Home</a></div>
-        <hr>
-        {% block content %}{% endblock %}
+        <div class="jumbotron">
+            <div>Microblog: <a href="/index">Home</a></div>
+            <hr>
+            {% block content %}{% endblock %}
+            </hr>
+        </div>
     </body>
 </html>
