--- a/app/templates/profile-list.html
+++ b/app/templates/profile-list.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-
-
     {% for post in posts %}
-    <a href="#" id="card-wrapper">
+    <div class="card-wrapper">
         <div class="card">
             <div class="card-title">
                 <h2>
@@ -23,6 +20,6 @@
                 </div>
             </div>
         </div>
-    </a>
+    </div>
     {% endfor %}
 {% endblock %}
