--- a/app/templates/profile-list.html
+++ b/app/templates/profile-list.html
@@ -5,7 +5,7 @@
 
 
     {% for post in posts %}
-    <a href="#" id="card-wrapper">
+    <a href="#" class="card-wrapper">
         <div class="card">
             <div class="card-title">
                 <h2>
