--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,24 +10,22 @@
         .card-wrapper {
             color: black;
             text-decoration: none;
-            width: 80%;
+            width: 75%;
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 20px;
+            border-top: 10px solid #B1FBD4;
+            border-radius: 3px;
+            margin-top: 15px;
+            height: 185px;
         }
         img {
-            width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-        }
-        h2 {
-            text-align: center;
-            margin-top: 20px;
+            height: 130px;
+            margin: 10px auto 10px auto;
         }
         .card {
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+          height: 180px;
           margin: auto;
           text-align: center;
           font-family: arial;
@@ -55,6 +53,10 @@
           text-decoration: none;
           font-size: 22px;
           color: black;
+        }
+        a:hover {
+            text-decoration: none;
+            color: black;
         }
 
         button:hover, a:hover {
