--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .item-wrapper {
@@ -34,6 +35,10 @@
             text-align: center;
         }
 
+        body {
+            padding: 10px 10px;
+        }
+
         img {
             width: 90%;
             margin-left: auto;
@@ -47,11 +52,11 @@
     </style>
 	</head>
 	<body>
-        <div class="jumbotron">
-            <div>Microblog: <a href="/index">Home</a></div>
-            <hr>
-            {% block content %}{% endblock %}
-            </hr>
-        </div>
+
+        <div>Microblog: <a href="/index">Home</a></div>
+        <hr>
+        {% block content %}{% endblock %}
+        </hr>
+
     </body>
 </html>
