--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,27 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>Hi, {{ current_user.username }}</h1>
-    {% if form %}
-        <form action="", method="post">
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.post.label }}<br>
-                {{ form.post(cols=32, rows=4) }}<br>
-                {% for error in form.post.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>{{ form.submit() }}</p>
-        </form>
-    {% endif %}
-	{% for post in posts %}
-	    {% include '_post.html' %}
-	{% endfor %}
-    {% if prev_url %}
-        <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-        <a href="{{ next_url }}">Older posts</a>
-    {% endif %}
+	<h1>Find Nonprofits!</h1>
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.search.label }}<br>
+            {{ form.search(size=50) }}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
 {% endblock %}
