search bar with css

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,22 @@
             text-align: center;
         }
 
+        .input-search {
+            height: 60px;
+            padding-left: 15px;
+            border-radius: 5px;
+            border: none;
+        }
+        .btn-search {
+            font-size: 26px;
+            font-weight: 500;
+            background-color: #A3F9CB;
+            padding-left: 30px;
+            padding-right: 30px;
+            height: 60px;
+
+        }
+
         body {
             padding: 20px 50px;
         }
