--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,19 @@
 	<h1>Find Nonprofits!</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.search.label }}<br>
-            {{ form.search(size=50) }}
-        </p>
-        <p>{{ form.submit() }}</p>
+        <div class="container">
+            <div class="row justify-content-center no-gutters">
+                <div class="col-6">
+                    <div class="d-flex justify-content-end">
+                        {{ form.search(size=50, class_="input-search") }}
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex justify-content-start">
+                        {{ form.submit(class_="btn btn-search") }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 {% endblock %}
