--- a/app/templates/nonprofit.html
+++ b/app/templates/nonprofit.html
@@ -7,28 +7,106 @@
     <div class="container">
         <div class="row justify-content-start">
         {% for item in items %}
-                <div class="col-6 item-wrapper card">
-                    <div class="row">
-                        <div class="col-6">
-                            {{ item.name }}: ${{ item.price }}
-                        </div>
-                        <div class="col-6">
-                            <div class="d-flex justify-content-end">
-                                <button type="button" class="btn btn-danger">-</button>
-                                <p class="amt-box">1</p>
-                                <button type="button" class="btn btn-success">+</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
+            <div class="card" style="width: 16rem; height: 16rem;">
+                <div class="card-body">
+                    <img class="card-img-top" id={{item.id}} style="width:165px;height:165px;">
+                    <div class="centered">{{item.name}}</div>
+                    <p class="card-text" align="center">
+                        <br>
+                        <i>Price:</i> ${{ item.price }}    <i>Quantity:</i>
+                    <input name="qty[]"
+                    onkeypress="return isNumeric(event)"
+                    oninput="maxLengthCheck(this)"
+                    placeholder="0"
+                    type="text"
+                    align="center"
+                    size="3.5"
+                    min = "0"
+                    max = "999"
+                    data-item-id = {{item.id}}
+                    data-item-name = {{item.name}}
+                    data-item-price = {{item.price}}
+                    data-item-image = "http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/sign-check-icon.png"
+                     />
+                </div>   
+            </div>
         {% endfor %}
+        <div class="card" style="width: 16rem; height: 16rem;">
+            <div class="card-body">
+                <img class="card-img-top" id="donate" style="width:165px;height:165px;">
+                <div class="centered">Donate money</div>
+                <p class="card-text" align="center">
+                    <br>
+                    <i>Amount:</i>
+                <input name="qty[]"
+                onkeypress="return isNumeric(event)"
+                oninput="maxLengthCheck(this)"
+                placeholder="0"
+                type="text"
+                align="center"
+                size="3.5"
+                min = "0"
+                max = "999"
+                data-item-id = "donate"
+                data-item-name = "donation"
+                data-item-price = 1
+                data-item-image = "http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/sign-check-icon.png"
+                 />
+            </div>   
         </div>
+        </div>
+        <br>
+        <div name="sum" class="total" align="left"></div>
+        <button class="basketbutton">Send your donation</button>
+        </div>
+
     </div>
+<script type="text/javascript">
 
+  function maxLengthCheck(object) {
+    if (object.value.length > object.max.length)
+      object.value = object.value.slice(0, object.max.length)
+      number = number + object.value; 
+  }
+    
+  function isNumeric (evt) {
+    var theEvent = evt || window.event;
+    var key = theEvent.keyCode || theEvent.which;
+    key = String.fromCharCode (key);
+    var regex = /[0-9]|\./;
+    if ( !regex.test(key) ) {
+      theEvent.returnValue = false;
+      if(theEvent.preventDefault) theEvent.preventDefault();
+    }
+  }
+    //Get a list of input fields to sum
+    document.getElementsByName("sum")[0].innerHTML = "Total: $0"
+    var elements = document.getElementsByName("qty[]");
+    var element_array = Array.prototype.slice.call(elements);
 
+    //Assign the keyup event handler
+    for(var i=0; i < element_array.length; i++){
+        element_array[i].addEventListener("keyup", sum_values);
+    }
 
-
+    //Function to sum the values and assign it to the last input field
+    function sum_values(){
+        var sum = 0;
+        for(var i=0; i < element_array.length; i++){
+            toAdd = parseInt(element_array[i].value, 10);
+            price = element_array[i].getAttribute("data-item-price");
+            if (!toAdd){
+                toAdd = 0;
+            }
+            sum += price*toAdd;
+        }
+        document.getElementsByName("sum")[0].innerHTML = "Total: $" + sum;
+    } 
+    for(var i=0; i < element_array.length-1; i++){
+        id = element_array[i].getAttribute("data-item-id");
+        image = element_array[i].getAttribute("data-item-image");
+        document.getElementById(id).setAttribute('src', image );
+    }
+</script>
 
 {% endblock %}
