background image placeholder/center content

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
             padding-left: 15px;
             border-radius: 5px;
             border: none;
+            outline: none;
         }
         .btn-search {
             font-size: 26px;
@@ -53,6 +54,10 @@
 
         body {
             padding: 20px 50px;
+        }
+
+        body-bkg {
+            background-image: url(https://media.wired.com/photos/5aea42f5506b56198b7c6ffd/master/w_2400,c_limit/NigerianPrinces-TA-912015140.jpg);
         }
 
         img {
