--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,22 +1,92 @@
-{% extends "base.html" %}
+<html>
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        {% if title %}
+		<title>{{ title }} - Microblog</title>
+		{% else %}
+		<title>Welcome to Microblog!</title>
+		{% endif %}
+	    <style>
 
-{% block content %}
-	<h1>Find Nonprofits!</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
+        body {
+            padding: 20px 50px;
+        }
+
+        img {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+        h2 {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .input-search {
+            height: 80px;
+            padding-left: 15px;
+            border-radius: 5px;
+            border: none;
+            outline: none;
+            font-size: 26px;
+        }
+        .btn-search {
+            font-size: 26px;
+            font-weight: 500;
+            background-color: #A3F9CB;
+            padding-left: 30px;
+            padding-right: 30px;
+            height: 80px;
+
+        }
+
+        .body-bkg {
+            background-image: url(https://media.wired.com/photos/5aea42f5506b56198b7c6ffd/master/w_2400,c_limit/NigerianPrinces-TA-912015140.jpg);
+        }
+
+        .vertical-center {
+          min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+          min-height: 100vh; /* These two lines are counted as one :-)       */
+
+          display: flex;
+          align-items: center;
+        }
+
+    </style>
+	</head>
+	<body class="body-bkg">
+
+        <div style="color:white">Microblog: <a href="/index" style="color:white">Home</a></div>
+        <hr>
+        <div class="vertical-center">
         <div class="container">
-            <div class="row justify-content-center no-gutters">
-                <div class="col-6">
-                    <div class="d-flex justify-content-end">
-                        {{ form.search(size=50, class_="input-search") }}
+            <div class="row justify-content-center"><h1 style="color: white; font-size: 48px; font-weight: 600;
+            margin-bottom:
+            50px;">
+                NONPROFIT SEARCH</h1></div>
+            <div class="row justify-content-center">
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+
+                    <div class="row justify-content-center no-gutters">
+                        <div class="col-10">
+                            <div class="d-flex justify-content-end">
+                                {{ form.search(size=50, class_="input-search") }}
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="d-flex justify-content-start">
+                                {{ form.submit(class_="btn btn-search") }}
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-6">
-                    <div class="d-flex justify-content-start">
-                        {{ form.submit(class_="btn btn-search") }}
-                    </div>
+
+            </form>
                 </div>
             </div>
-        </div>
-    </form>
-{% endblock %}
+            </div>
+
+    </body>
+</html>
+
