--- a/app/templates/profile-list.html
+++ b/app/templates/profile-list.html
@@ -4,9 +4,9 @@
 
     {% for post in posts %}
     <a href="#" class="card-wrapper rounded-top">
-        <div class="card">
+        <div class="card" style="height: 180px;">
             <div class="card-body">
-                <div class="row style="height: 170px;">
+                <div class="row" style="height: 170px;">
                     <div class="col-sm-4" id="img-wrapper">
                         <img src={{post.picture}} alt="Flower">
                     </div>
