--- a/app/templates/profile-list.html
+++ b/app/templates/profile-list.html
@@ -8,7 +8,7 @@
             <div class="card-body">
                 <div class="row" style="height: 170px;">
                     <div class="col-sm-4" id="img-wrapper">
-                        <img src={{post.picture}} alt="Flower">
+                        <img src={{post.picture}} class="list-img" alt="Flower">
                     </div>
                     <div class="col-sm-6 card-text">
                         <h4 style="text-align: left;">
