--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
 		{% endif %}
 	    <style>
 
+
         .card-wrapper {
             color: black;
             text-decoration: none;
@@ -72,7 +73,7 @@
             background-image: url(https://media.wired.com/photos/5aea42f5506b56198b7c6ffd/master/w_2400,c_limit/NigerianPrinces-TA-912015140.jpg);
         }
 
-        img {
+        .list-img {
             height: 130px;
             margin: 10px auto 10px auto;
         }
