--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,8 +49,8 @@
             transform: translate(-50%, -50%);
         }
         .total {
-            font-size: 20px;
-        }                    
+            font-size: 24px;
+        }
 
         .basketbutton {
             background-color: #3377ff;
@@ -59,8 +59,9 @@
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
-            display: inline-block;
             font-size: 16px;
+            margin: 30px auto 60px auto;
+            float: center;
         }
 
         img {
