--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,11 +42,9 @@
         }
 
         .centered {
-            position: absolute;
             font-size: 30px;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            margin: 10px auto;
+            align-text: center;
         }
         .total {
             font-size: 24px;
