--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,9 @@
       <style>
         .card-wrapper {
             color: black;
+            border-top: 10px solid #A3F9CB;
+            box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+            border-radius: 3px;
             text-decoration: none;
             width: 80%;
             display: block;
