--- a/app/templates/profile-list.html
+++ b/app/templates/profile-list.html
@@ -7,8 +7,8 @@
         <div class="card" style="height: 180px;">
             <div class="card-body">
                 <div class="row" style="height: 170px;">
-                    <div class="col-sm-4" id="img-wrapper">
-                        <img src="http://newvietgens.com/wp-content/uploads/2017/12/AAEAAQAAAAAAAAkjAAAAJDkzMGM2ZmZmLTQwYzYtNGIxOC1iYmEwLTJkMTk2ZjI5YTE2Nw-300x202.png" class="list-img" alt="Flower">
+                    <div class="col-sm-4" id="img-wrapper" >
+                        <img style="height: 150px; width: 280px;" src="http://newvietgens.com/wp-content/uploads/2017/12/AAEAAQAAAAAAAAkjAAAAJDkzMGM2ZmZmLTQwYzYtNGIxOC1iYmEwLTJkMTk2ZjI5YTE2Nw-300x202.png" class="list-img" alt="Flower">
                     </div>
                     <div class="col-sm-6 card-text">
                         <h4 style="text-align: left;">
