--- a/app/templates/profile-builder.html
+++ b/app/templates/profile-builder.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="card" style="width: 75%; margin-top: 50px; margin-bottom: 100px;">
+<div class="card" style="width: 75%; margin-left: auto; margin-right: auto; margin-top: 50px; margin-bottom: 100px;">
 
     <form>
         <div class="row" style="width: 90%; margin: 25px auto 25px auto;">
