--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
             padding: 30px 20px;
         }
 
+
         .amt-box {
             border: 1px black solid;
             padding-top: 5px;
@@ -35,6 +36,16 @@
             width: 70px;
             margin: 0px 10px;
             text-align: center;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+        .donate {
+            color: white;
+        }
+        .donate:hover {
+            color: white;
         }
 
         .total-box {
