--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,7 +75,10 @@
                                 </div>
                                 <div class="col-2">
                                     <div class="d-flex justify-content-start">
-                                        {{ form.submit(class_="btn btn-search") }}
+                                        <div class="d-flex justify-content-start">
+                                        <button class="btn btn-search"><a href="/results" style="color: black; text-decoration: none;">Search</a></button>
+                                    </div>
+                                        <!--{{ form.submit(class_="btn btn-search") }}-->
                                     </div>
                                 </div>
                             </div>
