--- a/app/templates/nonprofit.html
+++ b/app/templates/nonprofit.html
@@ -65,7 +65,7 @@
         </div>
         <br>
         <div name="sum" class="total" align="right"></div>
-        <div style=" float: right;"><button class="basketbutton">Send your donation</button></div>
+        <div style=" float: right;"><button class="basketbutton"><a href="/confirm" class="donate" style="text-decoration: none;">Send your donation</a></button></div>
         <div style="margin: 40px;"></div>
     </div>
 </div>
