--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,7 +105,7 @@
 
         <div class="row justify-content-between">
                 <div class="col-2">
-                    <h3 style="padding-top:5px"><a href="/index" style="color:black;">Home</a></h3>
+                    <h3 style="padding-top:10px; padding-left:10px;"><a href="/index" style="color:black;">Home</a></h3>
                 </div>
                 <div class="col-2">
                     <button class="btn btn-login" type="button">Login/Signup</button>
