--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -119,7 +119,7 @@
                     <h3 style="padding-top:10px; padding-left:10px;"><a href="/index" style="color:black;">Home</a></h3>
                 </div>
                 <div class="col-2">
-                    <button class="btn btn-login" type="button">Login/Signup</button>
+                    <button class="btn btn-login" type="button"><a href="/profile-builder" style="text-decoration: none; color: black;">Login/Signup</a></button>
                 </div>
 
         </div>
