--- a/app/templates/profile-builder.html
+++ b/app/templates/profile-builder.html
@@ -112,7 +112,7 @@
             <div class="col-sm-7"></div>
             <div class="col-sm-5">
                 <button class="btn btn-primary " id="buttonsubmit" style="width: 120px; height: 50px; display: inline-block; margin-right: 10px; border-radius: 0;">Add Item</button>
-                <button class="btn btn-primary" style="width: 120px; height: 50px; display: inline-block; border-radius: 0;">Save Profile</button>
+                <button class="btn btn-primary" style="width: 120px; height: 50px; display: inline-block; border-radius: 0;"><a href="/index" style="text-decoration: none; color: white;">Save Profile</a></button>
             </div>
         </div>
 
