--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,9 @@
             margin-right: auto;
             margin-top: 20px;
         }
-
+        .profile-builder-text {
+            padding-left: 10px;
+        }
         .item-wrapper {
             color: black;
             text-decoration: none;
@@ -116,9 +118,9 @@
 
         <div class="row justify-content-between">
                 <div class="col-2">
-                    <h3 style="padding-top:10px; padding-left:10px;"><a href="/index" style="color:black;">Home</a></h3>
+                    <a href="/index" style="color:black;"><img src="https://i.imgur.com/a38ZyIq.png" style="width: 100px; height: 100px;"></a>
                 </div>
-                <div class="col-2">
+                <div class="col-2" style="margin-top: 25px;">
                     <button class="btn btn-login" type="button"><a href="/profile-builder" style="text-decoration: none; color: black;">Login/Signup</a></button>
                 </div>
 
