--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,9 @@
         }
 
         .body-bkg {
-            background-image: url(https://media.wired.com/photos/5aea42f5506b56198b7c6ffd/master/w_2400,c_limit/NigerianPrinces-TA-912015140.jpg);
+            background-image: url(https://i.imgur.com/lbjAOZI.jpg);
+            width: 100%;
+            height: 80%;
         }
 
         .vertical-center {
@@ -68,10 +70,10 @@
 
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-6">
-                    <h3><a href="/index" style="color:white">Home</a></h3>
+                 <div class="col-2">
+                    <a href="/index" style="color:white"><img src="https://i.imgur.com/a38ZyIq.png" style="width: 100px; height: 100px;"></a>
                 </div>
-                <div class="col-2">
+                <div class="col-2" style="margin-top: 25px;">
                     <button class="btn btn-login" type="button"><a href="/profile-builder" style="text-decoration: none; color: black;">Login/Signup</a></button>
                 </div>
             </div>
